recursion.logo.sierpinski.Sierpinski.scala.error
Compilation error:
Sierpinski:1: error: not found: value levels
  if (levels!=0){
      ^Sierpinski:2: error: not found: value levels
    sierpinski(levels-1,length/2)
               ^Sierpinski:4: error: not found: value crab
    crab(levels-1,length/2)
    ^Sierpinski:4: error: not found: value levels
    crab(levels-1,length/2)
         ^Sierpinski:6: error: not found: value crab
    crab(levels-1,length/2)
    ^Sierpinski:6: error: not found: value levels
    crab(levels-1,length/2)
         ^