recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if (levels!=0){
    sierpinski(levels-1,length/2)
    right(120)
    crab(levels-1,length/2)
    left(120)
    crab(levels-1,length/2)
    right(120)
  }else{
    forward(length)
}
}